--- a/client/styles.css
+++ b/client/styles.css
@@ -6,5 +6,10 @@ body {
 .screen {
   border: 5px solid #28283e;
   background-color: #e0e0eb;
-  color: green;
+  color: #008000;
+  font-size: 24px;  
+}
+
+.register {
+  padding-left: 20px;
 }
