--- a/client/styles.css
+++ b/client/styles.css
@@ -8,8 +8,23 @@ body {
   background-color: #e0e0eb;
   color: #008000;
   font-size: 24px;  
+  padding-left: 5px;
+  width: 60%;
+  margin: auto;
 }
 
 .register {
   padding-left: 20px;
+}
+
+.allButtons {
+  padding-left: 20px;
+  width: 80%;
+  margin-left: 300px;
+}
+
+.center {
+  width: 100%;
+  margin: 0 auto;
+  color: blue;
 }
