--- a/client/sassDemo.scss
+++ b/client/sassDemo.scss
@@ -1,6 +1,29 @@
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 body {
   color: blue;
   font-size: 30px;
+}
+$pad: 20px;
+
+[class*='col-'] {
+  float: left;
+  padding-right: $pad;
+  .grid &:last-of-type {
+    padding-right: 0;
+  }
+}
+
+.col-1-3 {
+  width: 33%;
+}
+
+.col-1-5 {
+  width: 20%;
 }
 
 .screen {
@@ -9,18 +32,22 @@ body {
   color: #008000;
   font-size: 24px;  
   padding-left: 5px;
-  width: 60%;
+  width: 40%;
   margin: auto;
 }
 
 .register {
-  padding-left: 20px;
 }
 
 .allButtons {
-  padding-left: 20px;
-  width: 80%;
-  margin-left: 300px;
+  width: 40%;
+  margin: auto;
+  text-align: center;
+}
+
+.screenTitle {
+  margin: auto;
+  text-align: center;
 }
 
 .center {
