--- a/client/sassDemo.scss
+++ b/client/sassDemo.scss
@@ -8,8 +8,42 @@ body {
   color: blue;
   font-size: 30px;
 }
+
 button {
   color: red;
+}
+
+
+.button {
+  border-top: 1px solid #96d1f8;
+  background: #65a9d7;
+  background: -webkit-gradient(linear, left top, left bottom, from(#163b2d), to(#65a9d7));
+  background: -webkit-linear-gradient(top, #163b2d, #65a9d7);
+  background: -moz-linear-gradient(top, #163b2d, #65a9d7);
+  background: -ms-linear-gradient(top, #163b2d, #65a9d7);
+  background: -o-linear-gradient(top, #163b2d, #65a9d7);
+  padding: 10px 20px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+  -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  box-shadow: rgba(0,0,0,1) 0 1px 0;
+  text-shadow: rgba(0,0,0,.4) 0 1px 0;
+  color: white;
+  font-size: 18px;
+  font-family: Georgia, serif;
+  text-decoration: none;
+  vertical-align: middle;
+}
+.button:hover {
+  border-top-color: #28597a;
+  background: #28597a;
+  color: #d4c1d4;
+}
+.button:active {
+  border-top-color: #1b435e;
+  background: #1b435e;
 }
 $pad: 20px;
 
