--- a/client/sassDemo.scss
+++ b/client/sassDemo.scss
@@ -7,6 +7,13 @@
 body {
   color: blue;
   font-size: 30px;
+  // background: green;
+  background: #65a9d7;
+  background: -webkit-gradient(linear, left top, left bottom, from(#163b2d), to(#65a9d7));
+  background: -webkit-linear-gradient(top, #163b2d, #65a9d7);
+  background: -moz-linear-gradient(top, #163b2d, #65a9d7);
+  background: -ms-linear-gradient(top, #163b2d, #65a9d7);
+  background: -o-linear-gradient(top, #163b2d, #65a9d7);
 }
 
 button {
@@ -64,13 +71,21 @@ $pad: 20px;
 }
 
 .screen {
-  border: 5px solid #28283e;
-  background-color: #e0e0eb;
-  color: #008000;
+  // border: 5px solid #28283e;
+  // background-color: #e0e0eb;
+  color: white;
   font-size: 24px;  
   padding-left: 5px;
   width: 40%;
   margin: auto;
+
+  background: #65a9d7;
+  background: -webkit-gradient(linear, left top, left bottom, from(#163b2d), to(#65a9d7));
+  background: -webkit-linear-gradient(top, #163b2d, #65a9d7);
+  background: -moz-linear-gradient(top, #163b2d, #65a9d7);
+  background: -ms-linear-gradient(top, #163b2d, #65a9d7);
+  background: -o-linear-gradient(top, #163b2d, #65a9d7);
+
 }
 
 .register {
